overlay/dev/gateway/emojivoto-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:web-svc.emojivoto.svc.cluster.local:80
spec:
  rules:
    - host: dev-emojivoto.healthyflow.xyz
      http:
        paths:
          - backend:
              serviceName: web-svc
              servicePort: 80
